# clinical_research_assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  launch.bat  launch.sh  pyproject.toml  setup.bat  setup.sh
.claude/: settings.local.json
mcp_servers/: mcp_config.json
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  document_maker.py  email_drafter.py  orchestrator.py  project_manager.py
src/mcp/: __init__.py  config.py  email_server.py  filesystem_server.py  web_search_server.py
src/models/: __init__.py  agent_run.py  approval.py  database.py  document.py  project.py
src/services/: __init__.py  agent_coordinator.py  export_service.py  prompt_store.py  workspace_manager.py
src/ui/: __init__.py  agent_status_panel.py  approval_dialog.py  chat_panel.py  main_window.py  plan_viewer.py  question_widget.py  settings_dialog.py  styles.py  workspace_panel.py
src/utils/: __init__.py  config.py  logging.py
tests/: __init__.py
tests/test_agents/: test_orchestrator.py
tests/test_services/: test_export_service.py  test_workspace_manager.py
tests/test_ui/: test_approval_dialog.py
